# core-rec-matching-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-21-rec-matching-engine.md
docs/superpowers/specs/: 2026-04-21-api-backend-design.md  2026-04-21-rec-matching-engine-design.md
rec_engine/: __init__.py  __main__.py  cli.py  config.py  engine.py  expressions.py  loader.py  populations.py  schema.py  scorer.py  types.py  writer.py
rec_engine/matchers/: __init__.py  base.py  many_to_many.py  many_to_one.py  one_to_many.py  one_to_one.py
rec_engine_api/: __init__.py  __main__.py  cli.py  filters.py  main.py  runs.py  schemas.py  storage.py
sample/: benchmarks.md  config.json  config_demo.json
scripts/: generate_synthetic.py
tests/: test_api_integration.py  test_engine_integration.py
tests/fixtures/: config.json  expected_output.csv  input.csv
